# yunitrac_os

./: .backup_filelist_before.txt  .gitattributes  .gitignore  CANON.txt  Cargo.lock.backup  Cargo.toml  Justfile  PROOF.md  README.md  SECURITY_MODEL.md  deny.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  yunitrack_proofs.yml
crates/ac/: Cargo.toml  ac.cdx.json
crates/cm/: Cargo.toml  cm.cdx.json
crates/dio_core/: Cargo.toml  dio_core.cdx.json
crates/dio_udp/: Cargo.toml  dio_udp.cdx.json
crates/ro_in/: Cargo.toml  ro_in.cdx.json
crates/ro_out_receiver/: Cargo.toml  ro_out_receiver.cdx.json
crates/ro_out_receiver/src/: lib.rs  main.rs
crates/secure_ingress/: Cargo.toml  secure_ingress.cdx.json
crates/secure_ingress/src/: lib.rs  main.rs  nonce.rs  server.rs  types.rs  verify.rs
crates/secure_runner/: Cargo.toml  secure_runner.cdx.json
crates/shared/: Cargo.toml  shared.cdx.json
crates/shared/src/: lib.rs
crates/skeleton/: Cargo.toml  skeleton.cdx.json
crates/va_gate/: Cargo.toml  va_gate.cdx.json
crates/yuni_boundary/: Cargo.toml  yuni_boundary.cdx.json
crates/yuni_boundary/src/: main.rs
crates/yuni_verify/: Cargo.toml  yuni_verify.cdx.json
crates/yuni_verify/src/: main.rs
docker/: Dockerfile.ro_out_receiver  Dockerfile.secure_ingress  docker-compose.dev.online.yml  docker-compose.dev.yml
docs/: one_button_proof.md
docs/case_studies/: CASE_STUDY_01_EU_AI_ACT_AUDIT.md
docs/demos/: contract_review_demo.md
docs/handover/: PROCUREMENT_PACKET.md  public_git_readiness_report.md
docs/pad_c/: entrypoint.md
docs/plans/: ip_sbom_audit_packet_inventory.md
docs/policies/: license_policy.json
docs/release/: reproducible_builds.md  signing.md
docs/runbooks/: customer_pitch_onepager.md  deployment_matrix.md  docker_dev.md  friday_demo_script.md  git_governance.md  operator_one_command.md  release_evidence_index.md  secure_host_linux.md
docs/specs/: ai_act_evidence_mapping.md  anti_replay_profiles.md  boundary_scope_map.md  control_plane_action_ledger.md  evidence_html_report.md  forbidden_deps_symbols.md  gdpr_default_scrub_rules.json  gdpr_scrub_policy_pack.md  hitl_signature_policy.md  langchain_hashonly_callback.md  llm_bridge_mode.md  metrics_allowlist.md  no_feedback_allowlist_lite.md  pad_c_entrypoint.md  regex_example_zip_contents.tsv  request_ledger_v1.md  seccode_lite.md  (+4 more)
full_option/: README_START_HERE.txt  index.html
fuzz/: Cargo.toml
scripts/: dashboard_operator.sh  fuzz_build.sh  gate_boundary_deps.sh  gate_enterprise.sh  gate_no_ack.sh  prove.sh  prove_enterprise.sh  prove_lite.sh  runbook_operator.sh  sbom_generate.sh
(+108 files in other folders)
