[package]
name = "ro_out_receiver"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
dio_core = { path = "../dio_core" }
hex = "0.4"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shared = { path = "../shared" }

[dev-dependencies]
tempfile = "3.10"
