[package]
name = "shared"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = { version = "0.21", default-features = false, features = ["std"] }
thiserror = "1.0"
hex = "0.4"
hmac = "0.12"
