[package]
name = "yuni_boundary"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
shared = { path = "../shared" }
skeleton = { path = "../skeleton" }
cm = { path = "../cm" }
ac = { path = "../ac" }
va_gate = { path = "../va_gate" }
ro_in = { path = "../ro_in" }
thiserror = "1.0"
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
