[package]
name = "yuni_verify"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
shared = { path = "../shared" }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
cryptoki = "0.12"
p256 = { version = "0.13", features = ["pkcs8"] }
base64 = "0.21"
anyhow = "1.0"
